<resources>
    <string name="app_name">FT</string>
    <string name="sd_readerror">无法找到SD卡</string>
    <string name="folder">文件夹</string>
    <string name="file">文件</string>
    <string name="menu_HeaderTitle_action">操作</string>
    <string name="edit">编辑</string>
    <string name="copy">复制</string>
    <string name="move">移动</string>
    <string name="delete">删除</string>
    <string name="file_send">发送</string>
    <string name="fileSend_hotspot">开热点</string>
    <string name="fileSend_network">2G/3G/WIFI发送</string>
    <string name="fileAccept_hotspot">热点</string>
    <string name="fileAccept_network">2G/3G/WIFI</string>
    <string name="rename">重命名</string>
    <string name="input_newname">请输入新名字</string>
    <string name="input_folderName">请输入文件名</string>
    <string name="rename_sure">确定</string>
    <string name="rename_undo">取消</string>
    <string name="empty_warning">文本框不能为空,请重新输入</string>
    <string name="rename_success">重命名成功</string>
    <string name="rename_fail">重命名失败</string>
    <string name="newFolder_success">新建文件夹成功</string>
    <string name="newFolder_fail">新建文件夹失败</string>
    <string name="folderIsExist">文件夹已经存在</string>
    <string name="fileDelete_success">删除成功</string>
    <string name="fileDelete_fail">删除失败</string>
    <string name="fileCopy_success">复制成功</string>
    <string name="fileCopy_fail">复制失败</string>
    <string name="filePaste_success">粘贴成功</string>
    <string name="filePaste_fail">粘贴失败</string>
    <string name="file_already_exist">文件已经存在,请重新选择目录</string>
    <string name="fileMove_success">移动文件成功</string>
    <string name="fileMove_fail">移动文件失败</string>

    <string name="menu_file_accept_fromPh">从手机接收文件</string>
    <string name="menu_new_folder">新建文件夹</string>
    <string name="menu_file_paste">粘贴</string>
    <string name="menu_cancel">取消</string>
    <string name="menu_generate_qrcode">生成二维码</string>
    <string name="menu_scan_qrcode">扫描二维码</string>

    <string name="activity_actionBar_label">扫描二维码</string>

    <string name="tv_text_choseTargetDictionary">请选择目标文件夹</string>
    <string name="tv_text_default">文件管理</string>

    <string name="sendFile_title">请选择发送方式</string>
    <string name="editFile_title">编辑文件</string>
    <string name="acceptFile_title">请选择接收方式</string>

    <string name="NoChoose">0/3</string>
    <string name="ChooseOne">1/3</string>
    <string name="ChooseTow">2/3</string>
    <string name="ChooseThree">3/3</string>
    <string name="exitHint">再按一次退出程序</string>
    <string name="ChooseEnough">最多只可选择三个标签</string>
    <string name="ChooseHint">请先在上一页选择标签</string>
    <string name="item_swip_action">发送</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>
    <string name="str_defaultColor">#FF3F51B5</string>
    <string name="str_green">#3cac69</string>
    <string name="str_red">#FF4444</string>
    <string name="str_yellow">#FFBB33</string>
    <string name="str_sky_blue">#33B5E5</string>
    <string name="downloading_file_name">下载的文件名</string>
    <string name="downloading_file_manager">接收</string>
    <string name="downloading_file_manager_activity_title">正在接收的文件</string>
    <string name="accepting_dialog_title">正在的连接.</string>
    <string name="sending_dialog_title">正在发送的文件...</string>
    <string name="tv_apk">安装包</string>
    <string name="tv_picture">图片</string>
    <string name="tv_video">视频</string>
    <string name="tv_music">音乐</string>
    <string name="tv_document">文档</string>
    <string name="tv_zip">压缩包</string>
    <string name="tv_offline_webPages">离线网页</string>
    <string name="tv_others">其他</string>
    <string name="phone_SDCard">手机SD卡</string>
    <string name="scan_SDCard">正在扫描SD卡...</string>
    <string name="file_not_found">没有找到文件</string>
    <string name="title_file_transfer">文件传输</string>
    <string name="title_apk">安装包</string>
    <string name="title_documents">文档</string>
    <string name="title_music">音乐</string>
    <string name="title_offLineWebPages">离线网页</string>
    <string name="title_pictures">图片</string>
    <string name="title_video">视频</string>
    <string name="title_zip">压缩包</string>
    <string name="title_others">其他</string>
    <string name="tv_connecting">正在连接...</string>
    <string name="menu_file_accept_formPC">连接电脑</string>
</resources>
