<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.jcx.view.myListView.SwipeMenuListView
        android:id="@+id/lv_allapks_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/ll_progressbar_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:orientation="horizontal">
        <ProgressBar
            android:id="@+id/pb_waitingForGetapk_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            />
        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/scan_SDCard"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_file_not_found"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_not_found"/>

    <LinearLayout
        android:id="@+id/ll_classificed_main_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:orientation="horizontal">
        <ProgressBar
            android:id="@+id/pb_classicfiled_main_waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            />
        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tv_connecting"/>
    </LinearLayout>

</RelativeLayout>